<resources>
    <string name="app_name">My Chat</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_text">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="sign_up_text">Sign up</string>
    <string name="name_text">Name</string>
    <string name="confirmation_text">Confirmation</string>
    <string name="register_text">Register</string>
    <string name="save_text">Save</string>
    <string name="add_user_email">Add user Email</string>
</resources>